--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 #配置模板路径，默认就是templates，可不用配置
 #spring.thymeleaf.prefix=classpath:/templates/
-
+#静态资源路径
 spring.resources.static-locations=classpath:/static
