--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 #配置模板路径，默认就是templates，可不用配置
 #spring.thymeleaf.prefix=classpath:/templates/
-#静态资源路径
-spring.resources.static-locations=classpath:/static
+
+#设置静态资源路径，多个以逗号分隔
+spring.resources.static-locations=classpath:static/,file:static/
