更新一下代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8087
 #thymeleaf配置
 #模板的模式，支持如：HTML、XML、TEXT、JAVASCRIPT等
 spring.thymeleaf.mode=HTML5
@@ -13,3 +13,6 @@ spring.thymeleaf.cache=false
 
 #设置静态资源路径，多个以逗号分隔
 spring.resources.static-locations=classpath:static/,file:static/
+demo.name=Name
+demo.age=18
+
